--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -5,12 +5,9 @@ on:
   pull_request:
   schedule:
     - cron: '0 6 * * 0'
-
 jobs:
   CodeQL-Build:
-
-    runs-on: ubuntu:16.04
-
+    runs-on: ubuntu-20.04
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
@@ -46,6 +43,5 @@ jobs:
     #- run: |
     #   make bootstrap
     #   make release
-
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
