--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -8,8 +8,8 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: update
-        run: apt-get update -q -y
+        run: sudo apt-get update -q -y
       - name: install
-        run: apt-get install -y build-essential
+        run: sudo apt-get install -y build-essential
       - name: make
         run: make
