--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -10,6 +10,7 @@ jobs:
     name: "Release"
     runs-on: ubuntu-20.04
     steps:
+      - uses: actions/checkout@master
       - run: sudo apt-get update -y -q
       - run: sudo apt-get install -y build-essential
       - run: make
