--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -1,4 +1,4 @@
-name: "tagged-release"
+name: "release"
 
 on:
   push:
@@ -7,17 +7,16 @@ on:
 
 jobs:
   tagged-release:
-    name: "Release"
+    name: "release"
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@master
       - run: sudo apt-get update -y -q
-      - run: sudo apt-get install -y build-essential
+      - run: sudo apt-get install -y build-essential upx
       - run: make
+      - run: upx vpa
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: false
-          automatic_release_tag: "latest"
           files: vpa
-
