--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@master
       - run: sudo apt-get update -y -q
       - run: sudo apt-get install -y build-essential upx
-      - run: snap install zig --beta --classic
+      - run: sudo snap install zig --beta --classic
       - run: make zig
       - run: upx --lzma --best zig-out/bin/vpa
       - uses: "marvinpinto/action-automatic-releases@latest"
