--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -2,9 +2,8 @@ name: "release"
 
 on:
   push:
-    branches: [ "master" ]
-    #tags:
-    #  - "v*"
+    tags:
+      - "v*"
 
 jobs:
   tagged-release:
