--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ building:
   stage: build
   script:
     - apt-get update -q -y
-    - apt-get install -y build-essential
+    - apt-get install -y build-essential wget
     - wget 'https://ziglang.org/download/0.14.0/zig-linux-x86_64-0.14.0.tar.xz'
     - tar xf zig-linux-x86_64-0.14.0.tar.xz
     - mv zig-linux-x86_64-0.14.0 /usr/bin/zig
