--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,8 +10,9 @@ building:
     - apt-get install -y build-essential wget
     - wget 'https://ziglang.org/download/0.14.0/zig-linux-x86_64-0.14.0.tar.xz'
     - tar xf zig-linux-x86_64-0.14.0.tar.xz
-    - mv zig-linux-x86_64-0.14.0 /usr/bin/zig
-    - chmod +x /usr/bin/zig
+    - mv zig-linux-x86_64-0.14.0 zig
+    - chmod +x zig
+    - PATH=.:$PATH
     - make zig
   artifacts:
     name: vpa
