--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ building:
     - wget -q 'https://ziglang.org/download/0.14.0/zig-linux-x86_64-0.14.0.tar.xz'
     - tar xf zig-linux-x86_64-0.14.0.tar.xz
     - mv zig-linux-x86_64-0.14.0 zig
-    - chmod +x zig
+    - chmod 777 zig
     - PATH=.:$PATH
     - make -B zig
   artifacts:
