--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,8 +12,11 @@ building:
     - tar xf zig-linux-x86_64-0.14.0.tar.xz
     - mv zig-linux-x86_64-0.14.0 zig
     - chmod 777 zig
-    - PATH=.:$PATH
+    - ls -AFl
+    - PATH=$PWD:$PATH
+    - echo $PATH
     - hash zig
+    - whereis zig
     - make -B zig
   artifacts:
     name: vpa
