--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,13 +7,13 @@ building:
   stage: build
   script:
     - apt-get update -q -y
-    - apt-get install -y build-essential wget git
+    - apt-get install -y build-essential wget git upx
     - wget -q 'https://ziglang.org/download/0.14.0/zig-linux-x86_64-0.14.0.tar.xz'
     - tar xf zig-linux-x86_64-0.14.0.tar.xz
     - mv zig-linux-x86_64-0.14.0/zig .
     - chmod +x zig
     - PATH=$PWD:$PATH
-    - make zig
+    - make -B zig
   artifacts:
     name: vpa
     paths:
